--- a/jemdoc.css
+++ b/jemdoc.css
@@ -1,25 +1,31 @@
 /* Default css file for jemdoc. */
 
-table#tlayout {
+/* table#tlayout {
     border: none;
     border-collapse: separate;
     background: white;
-}
+} */
 /*
 body {
-	background: white;
-	padding-bottom: 8px;
-	margin: 0;
+    background: white;
+    padding-bottom: 8px;
+    margin: 0;
 }
 */
 html {
   background-color: #eeeeee; 
 }
 
+@font-face {
+	font-family: 'Inter';
+	src: url('fonts/Inter-Regular.woff2') format('woff2');
+	font-weight: 400;
+	font-style: normal;
+  }
 body { 
-  font-family: Georgia, serif;
-  color: #000;
-  background-color: #ffffff; 
+ font-family: 'Inter', 'Roboto', 'Helvetica Neue', Arial, 'Liberation Sans', 'system-ui', sans-serif;
+ color: #888;
+  background-color: #fff;
   text-align:left; /* for IE */
   margin-top: 30px; 
   margin-bottom: 30px;
@@ -32,343 +38,108 @@ body {
   max-width: 960px;
 }
 
-#layout-menu {
-	background: #f6f6f6;
-	border: 1px solid #dddddd;
-	padding-top: 0.5em;
-	padding-left: 8px;
-	padding-right: 8px;
-	font-size: 1.0em;
-	width: auto;
-	white-space: nowrap;
-    text-align: left;
-    vertical-align: top;
-}
+.contact-row {
+	display: flex;
+	align-items: center;
+	gap: 18px;           /* 图标之间的间距 */
+	margin: 12px 0 24px 0;
+  }
+  
+  .contact-icon {
+	width: 28px;         /* 控制图标宽度 */
+	height: 28px;        /* 控制图标高度 */
+	object-fit: contain; /* 保证图标不变形 */
+	transition: transform 0.2s, opacity 0.2s;
+	opacity: 0.85;
+	vertical-align: middle;
+	margin: 0;
+	padding: 0;
+  }
+  .contact-icon:hover {
+	transform: scale(1.15);
+	opacity: 1;
+  }
 
-#layout-menu td {
-	background: #f4f4f4;
-    vertical-align: top;
-}
-
-#layout-content {
-	padding-top: 0.0em;
-	padding-left: 1.0em;
-	padding-right: 1.0em;
-    border: none;
-    background: white;
-    text-align: left;
-    vertical-align: top;
-}
-
-#layout-menu a {
-	line-height: 1.5em;
-	margin-left: 0.5em;
-}
-
-tt {
-    background: #ffffdd;
-}
-
-pre, tt {
-	font-size: 90%;
-	font-family: monaco, monospace;
-}
-
-a, a > tt {
-	color: #224b8d;
-	text-decoration: none;
-}
-
-a:hover {
-	border-bottom: 1px gray dotted;
-}
-
-#layout-menu a.current:link, #layout-menu a.current:visited {
-	color: #022b6d;
-	border-bottom: 1px gray solid;
-}
-#layout-menu a:link, #layout-menu a:visited, #layout-menu a:hover {
-	color: #527bbd;
-	text-decoration: none;
-}
-#layout-menu a:hover {
-	text-decoration: none;
-}
-
-div.menu-category {
-	border-bottom: 1px solid gray;
-	margin-top: 0.8em;
-	padding-top: 0.2em;
-	padding-bottom: 0.1em;
-	font-weight: bold;
-}
-
-div.menu-item {
-	padding-left: 16px;
-	text-indent: -16px;
-}
-
-div#toptitle {
-	padding-bottom: 0.2em;
-	margin-bottom: 1.5em;
-	/*border-bottom: 3px double gray;*/
-}
-
-/* Reduce space if we begin the page with a title. */
-div#toptitle + h2, div#toptitle + h3 {
-	margin-top: 0em;
-}
-
-div#subtitle {
-	margin-top: 0.0em;
-	margin-bottom: 0.0em;
-	padding-top: 0em;
-	padding-bottom: 0.1em;
-}
-
-em {
-	font-style: italic;
-}
-
-strong {
-	font-weight: bold;
-}
+  .pub-table {
+	border: none;
+	margin: 12px 0 24px 0;
+	width: 100%;
+	border-collapse: separate;
+  }
+  
+  .pub-img {
+	width: 130px;
+	vertical-align: top !important; /* 强制顶部对齐 */
+	padding-right: 24px;
+  }
 
 
-h1, h2, h3 {
-	color: #527bbd;
-	margin-top: 0.7em;
-	margin-bottom: 0.5em;
-	padding-bottom: 0.2em;
-	line-height: 1.0;
-	padding-top: 0.5em;
-	border-bottom: 1px solid #aaaaaa;
+  body, p, li, td, th {
+	font-size: 1.08em;
+	line-height: 1.7;
+	letter-spacing: 0.01em;
+  }
+  
+  h1, h2, h3 {
+	font-family: 'Inter', 'Roboto', 'Helvetica Neue', Arial, 'Liberation Sans', 'system-ui', sans-serif;
+	font-weight: 700;
+	letter-spacing: 0.01em;
+  }
+
+  html, body, p, li, td, th, h1, h2, h3, h4, h5, h6, div, span, strong, em, b, i, ul, ol, dl, dt, dd {
+	font-family: 'Inter' !important;
+	color: #636161 !important;
+  }
+
+a, a:visited, a:active {
+  color: #224b8d;
 }
 
-h1 {
-	font-size: 165%;
-	padding-bottom: 0.3em;
-}
+.pub-info, .pub-authors, .pub-title, .pub-status {
+	font-family: 'Inter', 'Roboto', 'Helvetica Neue', Arial, 'Liberation Sans', 'system-ui', sans-serif !important;
+	font-size: 1.08em;
+	line-height: 1.5;
+	color: #888 !important;
+	font-weight: normal;
+  }
+  
+  .pub-highlight {
+	color: #224b8d !important;
+	font-style: italic !important;
+	font-weight: normal !important;
+  }
+  
+  .pub-status {
+	margin-left: 2px;
+  }
 
 h2 {
-	padding-top: 0.8em;
-	font-size: 125%;
+  border-bottom: 2px solid #d0d0d0;
+  padding-bottom: 4px;
+  margin-bottom: 18px;
 }
 
-h2 + h3 {
-    padding-top: 0.2em;
+.teaching-list {
+  margin-left: 0;
+  padding-left: 24px;
+  list-style-type: disc;
+}
+.teaching-list li {
+  margin-bottom: 6px;
+  font-size: 1.08em;
+  color: #292828;
 }
 
-h3 {
-	font-size: 110%;
-	border-bottom: none;
+.blue-bold {
+  color: #224b8d !important;
+  font-weight: bold;
 }
 
-p {
-	margin-top: 0.0em;
-	margin-bottom: 0.8em;
-	padding: 0;
-	line-height: 1.3;
+.blue-link {
+  color: #224b8d !important;
+  font-weight: normal !important;
+  text-decoration: none;
 }
-
-pre {
-	padding: 0;
-	margin: 0;
-}
-
-div#footer {
-	font-size: small;
-	border-top: 1px solid #c0c0c0;
-	padding-top: 0.1em;
-	margin-top: 4.0em;
-	color: #c0c0c0;
-}
-
-div#footer a {
-	color: #80a0b0;
-}
-
-div#footer-text {
-	float: left;
-	padding-bottom: 8px;
-}
-
-ul, ol, dl {
-	margin-top: 0.2em;
-	padding-top: 0;
-	margin-bottom: 0.8em;
-}
-
-dt {
-	margin-top: 0.5em;
-	margin-bottom: 0;
-}
-
-dl {
-	margin-left: 20px;
-}
-
-dd {
-	color: #222222;
-}
-
-dd > *:first-child {
-	margin-top: 0;
-}
-
-ul {
-	list-style-position: outside;
-	list-style-type: square;
-}
-
-p + ul, p + ol {
-	margin-top: -0.5em;
-}
-
-li {
-	margin-top:0.9em;
-}
-
-ol {
-	list-style-position: outside;
-	list-style-type: decimal;
-}
-
-li p, dd p {
-	margin-bottom: 0.3em;
-}
-
-
-ol ol {
-	list-style-type: lower-alpha;
-}
-
-ol ol ol {
-	list-style-type: lower-roman;
-}
-
-p + div.codeblock {
-	margin-top: -0.6em;
-}
-
-div.codeblock, div.infoblock {
-	margin-right: 0%;
-	margin-top: 1.2em;
-	margin-bottom: 1.3em;
-}
-
-div.blocktitle {
-	font-weight: bold;
-	color: #cd7b62;
-	margin-top: 1.2em;
-	margin-bottom: 0.1em;
-}
-
-div.blockcontent {
-	border: 1px solid silver;
-	padding: 0.3em 0.5em;
-}
-
-div.infoblock > div.blockcontent {
-	background: #ffffee;
-}
-
-div.blockcontent p + ul, div.blockcontent p + ol {
-	margin-top: 0.4em;
-}
-
-div.infoblock p {
-	margin-bottom: 0em;
-}
-
-div.infoblock li p, div.infoblock dd p {
-	margin-bottom: 0.5em;
-}
-
-div.infoblock p + p {
-	margin-top: 0.8em;
-}
-
-div.codeblock > div.blockcontent {
-	background: #f6f6f6;
-}
-
-span.pycommand {
-	color: #000070;
-}
-
-span.statement {
-	color: #008800;
-}
-span.builtin {
-	color: #000088;
-}
-span.special {
-	color: #990000;
-}
-span.operator {
-	color: #880000;
-}
-span.error {
-	color: #aa0000;
-}
-span.comment, span.comment > *, span.string, span.string > * {
-	color: #606060;
-}
-
-@media print {
-	#layout-menu { display: none; }
-}
-
-#fwtitle {
-	margin: 2px;
-}
-
-#fwtitle #toptitle {
-	padding-left: 0.5em;
-	margin-bottom: 0.5em;
-}
-
-#layout-content h1:first-child, #layout-content h2:first-child, #layout-content h3:first-child {
-	margin-top: -0.7em;
-}
-
-div#toptitle h1, #layout-content div#toptitle h1 {
-	margin-bottom: 0.0em;
-	padding-bottom: 0.1em;
-	padding-top: 0;
-	margin-top: 0.5em;
-	border-bottom: none;
-}
-
-img.eq {
-	padding: 0;
-	padding-left: 0.1em;
-	padding-right: 0.1em;
-	margin: 0;
-}
-
-img.eqwl {
-	padding-left: 2em;
-	padding-top: 0.6em;
-	padding-bottom: 0.2em;
-	margin: 0;
-}
-
-table + table {
-    margin-top: 1em;
-}
-
-tr.heading {
-    font-weight: bold;
-    border-bottom: 2px solid black;
-}
-
-img {
-    border: none;
-}
-
-table.imgtable, table.imgtable td {
-    border: none;
-    text-align: left;
+.blue-link:hover {
+  text-decoration: underline;
 }
